--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,11 @@
-accelerate==0.29.3
-aiohttp==3.9.5
-aiosignal==1.3.1
-annotated-types==0.6.0
-attrs==23.2.0
 beautifulsoup4==4.12.3
-blinker==1.8.2
-blis==0.7.11
-cachetools==5.3.3
-catalogue==2.0.10
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpathlib==0.16.0
-confection==0.1.4
-curated-tokenizers==0.0.9
-curated-transformers==0.1.1
-cymem==2.0.8
 datasets==2.19.0
 dateparser==1.2.0
-dill==0.3.8
-en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl#sha256=ab70aeb6172cde82508f7739f35ebc9918a3d07debeed637403c8f794ba3d3dc
-en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl#sha256=f72abb34bdf174876bd4267b29b2501677e605e0a251fdc56c163003182ed68b
-filelock==3.13.4
 Flask==3.0.3
-frozenlist==1.4.1
-fsspec==2024.3.1
-google==3.0.0
-google-api-core==2.19.0
-google-api-python-client==2.129.0
-google-auth==2.29.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0
-googleapis-common-protos==1.63.0
-httplib2==0.22.0
-huggingface-hub==0.22.2
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.3
-joblib==1.4.0
-langcodes==3.4.0
-language_data==1.2.0
-marisa-trie==1.1.0
-MarkupSafe==2.1.5
-mpmath==1.3.0
-multidict==6.0.5
-multiprocess==0.70.16
-murmurhash==1.0.10
-networkx==3.3
-nltk==3.8.1
-numpy==1.26.4
-oauthlib==3.2.2
-packaging==24.0
-pandas==2.2.2
-preshed==3.0.9
-proto-plus==1.23.0
-protobuf==4.25.3
-psutil==5.9.8
-pyarrow==16.0.0
-pyarrow-hotfix==0.6
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pygame==2.5.2
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
+google_api_python_client==2.129.0
+google_auth_oauthlib==1.2.0
+protobuf==5.26.1
+pytest==8.2.1
 pytz==2024.1
-PyYAML==6.0.1
-regex==2024.4.16
-requests==2.31.0
-requests-oauthlib==2.0.0
-rsa==4.9
-safetensors==0.4.3
-scikit-learn==1.4.2
-scipy==1.13.0
-seqeval==1.2.2
-setuptools==69.5.1
-six==1.16.0
-smart-open==6.4.0
-soupsieve==2.5
 spacy==3.7.4
-spacy-alignments==0.9.1
-spacy-curated-transformers==0.2.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-spacy-transformers==1.3.5
-srsly==2.4.8
-sympy==1.12
-thinc==8.2.3
-threadpoolctl==3.4.0
-tokenizers==0.15.2
 torch==2.2.2
-tqdm==4.66.2
-transformers==4.36.2
-typer==0.9.4
-typing_extensions==4.11.0
-tzdata==2024.1
-tzlocal==5.2
-uritemplate==4.1.1
-urllib3==2.2.1
-wasabi==1.1.2
-weasel==0.3.4
-Werkzeug==3.0.3
-xxhash==3.4.1
-yarl==1.9.4
